--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ a{
     justify-content: center;
     align-items: center;
 }
+.logo a{
+    color: white;
+}
 .nav-bar{
     width: 50%;
     display: flex;
