--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ a{
 section{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 30px;
 }
 .title {
@@ -61,4 +63,7 @@ article{
     font-family:  Arial, sans-serif;
     text-align: center;
     font-weight: lighter;
+}
+iframe{
+    margin-top: 30px;
 }
